set(BUILD_SAMPLES OFF CACHE BOOL "Turn off samples" FORCE)

set(EXERCISE 2)

if (EXERCISE EQUAL 0)
    set(DSL_MODULE_DIR ../samples/plasma-meets-ai-workshop/blur CACHE BOOL "" FORCE)
    add_executable(blur blur/blur.c)
    target_link_libraries(blur astaroth_core astaroth_utils)
elseif (EXERCISE EQUAL 1)
    set(DSL_MODULE_DIR ../samples/plasma-meets-ai-workshop/hydro CACHE BOOL "" FORCE)
    add_executable(hydro hydro/hydro.c)
    target_link_libraries(hydro astaroth_core astaroth_utils)
else ()
    set(DSL_MODULE_DIR ../samples/plasma-meets-ai-workshop/hydro-sgs CACHE BOOL "" FORCE)
    add_executable(hydro-sgs hydro-sgs/hydro-sgs.c)
    target_link_libraries(hydro-sgs astaroth_core astaroth_utils)
endif()