set(SAMPLE_NAME fft)
find_package(CUDAToolkit REQUIRED)
# set(CMAKE_CXX_STANDARD 20)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
if("${CMAKE_BUILD_TYPE}" STREQUAL "")
  set(CMAKE_BUILD_TYPE Release)
endif()
if(CMAKE_CUDA_ARCHITECTURES LESS 60)
  set(CMAKE_CUDA_ARCHITECTURES 60 70 75 80 86)
endif()
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# set_source_files_properties(${ROUTINE}_example.cpp PROPERTIES LANGUAGE CUDA)
add_executable(fft-shift-test main.cu)
target_include_directories(fft-shift-test PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
target_link_libraries(fft-shift-test PRIVATE astaroth_core astaroth_utils)
